[gd_scene load_steps=13 format=3 uid="uid://b6gjecgfpv73c"]

[ext_resource type="Script" uid="uid://dpne4mlnv6oco" path="res://Scenes/LevelSelector/level_selector.gd" id="1_2db0o"]
[ext_resource type="Texture2D" uid="uid://d3osebxqp4d5h" path="res://Assets/Menus/levelselectbackground.jpg" id="1_5xyw6"]
[ext_resource type="FontFile" uid="uid://b2w2wrn27nw2o" path="res://Assets/Fonts/Cartoon2US-Regular.ttf" id="2_2db0o"]
[ext_resource type="Script" uid="uid://1fgsvct3wqfe" path="res://Scenes/LevelSelector/button_level_1.gd" id="4_b8t80"]
[ext_resource type="Script" uid="uid://mj5l78ny564g" path="res://Scenes/LevelSelector/button_level_2.gd" id="5_t6kw3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sn3u0"]
texture = ExtResource("1_5xyw6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sn3u0"]
bg_color = Color(0.454902, 0.454902, 0.454902, 0.556863)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3o3bh"]
bg_color = Color(0.846557, 0.842259, 0.840415, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gcooo"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0

[sub_resource type="Animation" id="Animation_g3msu"]
resource_name = "Level_Select_Anim"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.9, 5.93333),
"transitions": PackedFloat32Array(1.62451, 1.7411, 1.51572),
"update": 0,
"values": [Vector2(380, 43), Vector2(420, 43), Vector2(380, 43)]
}

[sub_resource type="Animation" id="Animation_oef0k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 43)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2h1o8"]
_data = {
&"Level_Select_Anim": SubResource("Animation_g3msu"),
&"RESET": SubResource("Animation_oef0k")
}

[node name="Level_Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2db0o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sn3u0")

[node name="Button Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.0
offset_top = -279.0
offset_right = -406.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.349065, 0.349065, 0.349065, 1)
theme_override_colors/font_focus_color = Color(0.34902, 0.34902, 0.34902, 1)
theme_override_fonts/font = ExtResource("2_2db0o")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_sn3u0")
theme_override_styles/hover = SubResource("StyleBoxFlat_sn3u0")
theme_override_styles/normal = SubResource("StyleBoxFlat_3o3bh")
text = "Back"

[node name="Button Level 1" type="Button" parent="."]
layout_mode = 0
offset_left = 99.0
offset_top = 234.0
offset_right = 385.0
offset_bottom = 346.0
theme_override_fonts/font = ExtResource("2_2db0o")
theme_override_font_sizes/font_size = 40
text = "Level 1"
script = ExtResource("4_b8t80")

[node name="Button Level 2" type="Button" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 236.0
offset_right = 722.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("2_2db0o")
theme_override_font_sizes/font_size = 40
text = "Level 2"
script = ExtResource("5_t6kw3")

[node name="Label Level Info" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 437.0
offset_right = 541.0
offset_bottom = 566.0
theme_override_fonts/font = ExtResource("2_2db0o")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gcooo")
text = "Name :
Time :
Best Record :"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("Label _Select a Level_")
libraries = {
&"": SubResource("AnimationLibrary_2h1o8")
}
autoplay = "Level_Select_Anim"

[node name="Label _Select a Level_" type="Label" parent="AnimationPlayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 43.0
offset_right = 176.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.319255, 0.319255, 0.319255, 1)
theme_override_fonts/font = ExtResource("2_2db0o")
theme_override_font_sizes/font_size = 60
text = "Select a Level"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button Back" to="." method="_on_back_pressed"]
[connection signal="focus_entered" from="Button Level 1" to="Button Level 1" method="_on_focus_entered"]
[connection signal="focus_exited" from="Button Level 1" to="Button Level 1" method="_on_focus_exited"]
[connection signal="focus_entered" from="Button Level 2" to="Button Level 2" method="_on_focus_entered"]
[connection signal="focus_exited" from="Button Level 2" to="Button Level 2" method="_on_focus_exited"]
[connection signal="ready" from="AnimationPlayer/Label _Select a Level_" to="." method="_on_label__select_a_level__ready"]
